objects/Expense__c.object
<CustomObject>
    <fields>
        <fullName>Business_Mileage__c</fullName>
        <label>Mileage (Business)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Industry_Code__c</fullName>
        <description>From CDF3 file via Expense system</description>
        <inlineHelpText>Industry Code based on MCC Code</inlineHelpText>
        <label>CC Industry Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Provider_Trans_Description__c</fullName>
        <description>From CDF3 file via Expense system</description>
        <inlineHelpText>Transaction description from the card provider (MasterCard) data</inlineHelpText>
        <label>CC Provider Trans Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Trans_No__c</fullName>
        <inlineHelpText>Credit Card Transaction Number</inlineHelpText>
        <label>CC Trans No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Vendor_Trans_Description__c</fullName>
        <formula>Credit_Card_Transaction__r.Description__c</formula>
        <inlineHelpText>Transaction description from the card vendor (BMO/Comdata) data</inlineHelpText>
        <label>CC Vendor Trans Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Card Transaction</label>
        <referenceTo>Credit_Card_Transaction__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department_Code__c</fullName>
        <label>Department Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Id__c</fullName>
        <label>Department Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employee_Id__c</fullName>
        <label>Employee Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Amount__c</fullName>
        <label>Expense Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Category__c</fullName>
        <formula>/* The number assigned to the Expense Type is mapped to a Category below */
CASE(
CASE(Expense_Type__c,
  &apos;FOOD&apos;,1,
  &apos;SNACKS&apos;,1,
  &apos;CAR_RENTAL&apos;,2,
  &apos;CAR_RENTAL_OTHER&apos;,2,
  &apos;DEST&apos;,2,
  &apos;GAS_FUEL&apos;,2,
  &apos;GROUND_TRANSPORT&apos;,2,
  &apos;MILEAGE&apos;,2,
  &apos;OTHER_AIRFEES&apos;,2,
  &apos;PARKING_TRIP&apos;,2,
  &apos;TAXIS&apos;,2,
  &apos;TOLLS&apos;,2,
  &apos;HOTEL_MISC&apos;,3,
  &apos;HOTEL_NIGHT&apos;,3,
  &apos;HOTEL_TAXES&apos;,3,
  &apos;PARKING_HOTEL&apos;,3,
  &apos;PERSONAL_EXPENSE&apos;,4,
  &apos;MOBILE_COMM&apos;,5,
  &apos;REMOTE_INTERNET&apos;,5,
  &apos;REMOTE_MOBILE&apos;,5,
  &apos;COPY_PRINT&apos;,6,
  &apos;PUBLICATIONS&apos;,6,
  &apos;SHIPPING&apos;,6,
  &apos;SUPPLIES&apos;,6,
  &apos;CONFERENCE&apos;,7,
  &apos;GROUP_EVENT&apos;,7,
  &apos;MEMBER_MEETING&apos;,7,
  &apos;OVER_LIMIT&apos;,8,
  &apos;TIPS&apos;,8,
  0),
    1,&apos;Meals&apos;,
    2,&apos;Transportation&apos;,
    3,&apos;Lodging&apos;,
    4,&apos;Personal&apos;,
    5,&apos;Communications&apos;,
    6,&apos;Office&apos;,
    7,&apos;Relations&apos;,
    8,&apos;Fees&apos;,
    &apos;Other&apos;)</formula>
        <label>Expense Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Date__c</fullName>
        <description>Date the expense occurred</description>
        <label>Expense Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense_Report_Employee__c</fullName>
        <inlineHelpText>Employee Name from the expense report import</inlineHelpText>
        <label>Expense Report Employee</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Report_Id__c</fullName>
        <label>Expense Report Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Report_Line_Id__c</fullName>
        <externalId>true</externalId>
        <label>Expense Report Line Id</label>
        <length>145</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Expense_Report_Name__c</fullName>
        <description>Title of Report</description>
        <label>Expense Report Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Report_Status_Value__c</fullName>
        <formula>if(Source_System__c == &apos;Databasics&apos;,
    CASE(Expense_Report_Status__c,
        &apos;A&apos;,&apos;Approved&apos;,
        &apos;H&apos;,&apos;On Hold&apos;,
        &apos;J&apos;,&apos;Rejected&apos;,
        &apos;O&apos;,&apos;(Unspecified)&apos;,
        &apos;P&apos;,&apos;Pending Approval&apos;,
        &apos;R&apos;,&apos;Released (Submitted for Approval)&apos;,
        &apos;&apos;),
    &apos;&apos;)</formula>
        <label>Expense Report Status Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Report_Status__c</fullName>
        <description>Status of report</description>
        <inlineHelpText>H - On Hold
R - Released
A - Approved</inlineHelpText>
        <label>Expense Report Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Type__c</fullName>
        <label>Expense Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Share_Date__c</fullName>
        <description>Date the record share was last updated</description>
        <label>Last Share Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Manager_Id__c</fullName>
        <formula>CASESAFEID( User__r.ManagerId )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Name__c</fullName>
        <formula>User__r.Manager.FirstName &amp; &apos; &apos; &amp; User__r.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mileage_Rate__c</fullName>
        <label>Mileage Rate</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Per_Diem_Rate__c</fullName>
        <label>Per Diem Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Personal_Amount__c</fullName>
        <label>Personal Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Personal_Mileage__c</fullName>
        <label>Personal Mileage</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Place_Id__c</fullName>
        <label>Place Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Place_Name__c</fullName>
        <description>From Expense system</description>
        <inlineHelpText>Locale of the Expense</inlineHelpText>
        <label>Place Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Date__c</fullName>
        <description>From CDF3 file via Expense system</description>
        <inlineHelpText>Date the transaction posted to the credit card</inlineHelpText>
        <label>Post Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Posted_Amount__c</fullName>
        <description>From CDF3 file via Expense system</description>
        <inlineHelpText>Amount posted to the credit card</inlineHelpText>
        <label>Posted Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <description>source system of the data</description>
        <label>Source System</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Trans_No__c</fullName>
        <description>From CDF3 file via Expense system</description>
        <inlineHelpText>CDF3 Transaction Number</inlineHelpText>
        <label>Source Trans No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_Date__c</fullName>
        <label>Submit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <description>From CDF3 file via Expense system</description>
        <inlineHelpText>Date the transaction occurred</inlineHelpText>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expensed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expense_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Description__c</fullName>
        <label>Vendor Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Expense</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Expense_Amount__c</columns>
        <columns>Expense_Category__c</columns>
        <columns>Expense_Date__c</columns>
        <columns>User__c</columns>
        <columns>Expense_Type__c</columns>
        <columns>Manager_Name__c</columns>
        <columns>Payment_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Expenses</fullName>
        <columns>NAME</columns>
        <columns>Expense_Date__c</columns>
        <columns>Expense_Category__c</columns>
        <columns>Expense_Type__c</columns>
        <columns>Expense_Amount__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>User__c</columns>
        <columns>Department_Id__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Expenses</label>
    </listViews>
    <listViews>
        <fullName>Expenses_Approved</fullName>
        <columns>NAME</columns>
        <columns>Expense_Date__c</columns>
        <columns>Expense_Category__c</columns>
        <columns>Expense_Type__c</columns>
        <columns>Expense_Amount__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>User__c</columns>
        <columns>Department_Id__c</columns>
        <columns>Expense_Report_Status_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Expense_Report_Status_Value__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Expenses - Approved</label>
    </listViews>
    <listViews>
        <fullName>Expenses_BMO</fullName>
        <columns>NAME</columns>
        <columns>Expense_Amount__c</columns>
        <columns>Expense_Category__c</columns>
        <columns>Expense_Date__c</columns>
        <columns>User__c</columns>
        <columns>Expense_Type__c</columns>
        <columns>Manager_Name__c</columns>
        <columns>Payment_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payment_Type__c</field>
            <operation>equals</operation>
            <value>BMO</value>
        </filters>
        <label>Expenses - BMO</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Expenses_Comdata</fullName>
        <columns>NAME</columns>
        <columns>Expense_Amount__c</columns>
        <columns>Expense_Category__c</columns>
        <columns>Expense_Date__c</columns>
        <columns>User__c</columns>
        <columns>Expense_Type__c</columns>
        <columns>Manager_Name__c</columns>
        <columns>Payment_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payment_Type__c</field>
            <operation>equals</operation>
            <value>Comdata</value>
        </filters>
        <label>Expenses - Comdata</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Expenses_Comdata_User</fullName>
        <columns>NAME</columns>
        <columns>Expense_Amount__c</columns>
        <columns>Expense_Category__c</columns>
        <columns>Expense_Date__c</columns>
        <columns>User__c</columns>
        <columns>Expense_Type__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Expense_Report_Status_Value__c</columns>
        <columns>Credit_Card_Transaction__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employee_Id__c</field>
            <operation>equals</operation>
            <value>225608</value>
        </filters>
        <filters>
            <field>Payment_Type__c</field>
            <operation>equals</operation>
            <value>Comdata</value>
        </filters>
        <filters>
            <field>Expense_Report_Id__c</field>
            <operation>equals</operation>
            <value>46370</value>
        </filters>
        <label>Expenses - Comdata - User</label>
        <sharedTo>
            <group>Credit_Card_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Expenses_Updated_Today</fullName>
        <columns>NAME</columns>
        <columns>Expense_Amount__c</columns>
        <columns>Expense_Category__c</columns>
        <columns>Expense_Date__c</columns>
        <columns>User__c</columns>
        <columns>Expense_Type__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Credit_Card_Transaction__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Expenses - Updated Today</label>
        <sharedTo>
            <group>Credit_Card_Admins</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>E-{0000000000}</displayFormat>
        <label>Expense  Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Expense_Owner__c</fullName>
        <label>Expense Owner</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Manager_of_Expense_Owner__c</fullName>
        <label>Manager of Expense Owner</label>
    </sharingReasons>
</CustomObject>